# SimScaleAI

./: .gitignore  LICENSE  README.md  eval_juggle.py  eval_pick_place.py  pyproject.toml
.github/workflows/: ci.yml
docs/: api-reference.md  architecture.md  cli-reference.md  contributing.md  data-generation.md  getting-started.md  index.md  models.md  reinforcement-learning.md  simulation.md  training.md  tutorial-rl-robotics-from-scratch.md  tutorial-vla-from-scratch.md  tutorial-vlm-from-scratch.md  visualization.md
outputs/humanoid_walk/: eval_results.json  humanoid_ppo.pt  train_metrics.json
scripts/: train_humanoid_walk.py
simscaleai/: __init__.py
simscaleai/datagen/: __init__.py  generator.py  parallel_generator.py
simscaleai/eval/: transfer_benchmark.py
simscaleai/models/: __init__.py  bc.py  registry.py  vla.py
simscaleai/models/policy_heads/: __init__.py  diffusion_head.py  mlp_head.py
simscaleai/rl/: __init__.py  evaluator.py
simscaleai/rl/agents/: __init__.py  ppo.py
simscaleai/rl/rewards/: __init__.py  rewards.py
simscaleai/sim/: __init__.py  base_env.py  domain_randomization.py  factory.py
simscaleai/sim/assets/: humanoid_walk.xml  panda_cloth_fold.xml  panda_juggle.xml  panda_pick_place.xml  panda_reach.xml
simscaleai/sim/envs/: __init__.py  cloth_fold_env.py  humanoid_walk_env.py  juggle_env.py  pick_place_env.py  reach_env.py
simscaleai/tools/: __init__.py  cli.py  visualize.py
simscaleai/training/: __init__.py  train_vla.py  trainer.py
tests/: test_models.py  test_rl.py  test_sim.py  test_training.py
