[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simscaleai"
version = "0.1.0"
description = "End-to-end robotics AI training and simulation platform"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Ravi" }]
keywords = ["robotics", "simulation", "reinforcement-learning", "foundation-models", "mujoco"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mujoco>=3.1",
    "gymnasium>=1.0",
    "torch>=2.2",
    "torchvision>=0.17",
    "numpy>=1.26",
    "hydra-core>=1.3",
    "omegaconf>=2.3",
    "wandb>=0.16",
    "h5py>=3.10",
    "typer>=0.9",
    "rich>=13.0",
    "Pillow>=10.0",
    "opencv-python>=4.9",
    "tqdm>=4.66",
    "pyyaml>=6.0",
    "tensorboard>=2.16",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "ruff>=0.3",
    "mypy>=1.9",
    "pre-commit>=3.6",
]
rl = [
    "stable-baselines3>=2.3",
]
transformers = [
    "transformers>=4.40",
    "timm>=1.0",
]
all = ["simscaleai[dev,rl,transformers]"]

[project.scripts]
simscale = "simscaleai.tools.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["simscaleai*"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "gpu: marks tests requiring GPU",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
